[package]
edition = "2018"
name = "codex-git"
version = "0.1.1"

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.44"
chrono = "0.4.19"
env_logger = "0.9.0"
getset = "0.1.1"
git2 = { version = "0.13.23", features = ["vendored-libgit2"] }
git2_credentials = "0.7.3"
log = "0.4.14"
ron = "0.7.0"
serde = { version = "1.0.130", features = ["derive"] }
simple_logger = "1.13.0"
tempfile = "3.2.0"
test-env-log = "0.2.7"
thiserror = "1.0.30"
