[package]
authors = ["Martin <m.e@acm.org>"]
description = "Simpliied git2 access"
documentation = "https://docs.rs/codex-git/0.1.1/narthex_engine_trait/"
edition = "2018"
keywords = ["portable", "cross-platform", "git2"]
license = "MPL-2.0"
name = "codex-git"
publish = true
readme = "README.md"
repository = "https://github.com/martinellison/codex-git"
version = "0.1.1"

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.44"
chrono = "0.4.19"
env_logger = "0.9.0"
getset = "0.1.1"
git2 = {version = "0.13.23", features = ["vendored-libgit2"]}
git2_credentials = "0.7.3"
log = "0.4.14"
ron = "0.7.0"
serde = {version = "1.0.130", features = ["derive"]}
simple_logger = "1.13.0"
tempfile = "3.2.0"
test-env-log = "0.2.7"
thiserror = "1.0.30"

# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.
